# tree-sitter-prism

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  devenv.nix  example.prism  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-prism.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_prism/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPrism/: prism.h
bindings/swift/TreeSitterPrismTests/: TreeSitterPrismTests.swift
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/: csg_rps_example.prism  globals_labels_formulas_example.prism  mdp_example.prism  nongame_properties_test.prism  properties_test.prism
test/corpus/: expressions.txt  game_properties.txt  model_language.txt  nongame_properties.txt
